<resources>
    <string name="app_name">Story App</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="less_password">number of passwords less than 8 characters!</string>
    <string name="login_now">Login Now</string>
    <string name="register">Dont have an account?</string>
    <string name="login">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="register_now">Register Now</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="logout">Log Out</string>
    <string name="photo">Photo</string>
    <string name="photo_story">Photo Story</string>
    <string name="date_story_hint">Created at : 1 May 2023</string>
    <string name="Maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Failed. Try Again!</string>
</resources>